Fix zoom on ios safari

--- a/app/yamu-react-app/styles/globals/reset.css
+++ b/app/yamu-react-app/styles/globals/reset.css
@@ -134,5 +134,5 @@ table {
 
 html {
   -webkit-text-size-adjust: none;
-  touch-action: manipulation;
+  touch-action: none;
 }
